Darwin Build Scripts Change History
-----------------------------------

Release 0.X.Y [now]
	- darwinbuild: Add support for "src_foo.c.add" patches as overlays
	- updated Makfile to honor DSTROOT
	- darwinxref: Added additive and subtractive dependencies
	- darwintrace: prevent the log file descriptor from being closed
	- darwinxref: exportIndex now quotes dictionary keys when necessary
	- darwinxref: Added APIs for accessing properties without inheritance
	- darwinxref: version '*' now prints all inherited project versions
	- darwinbuild: always enable volfs when building
	- darwinbuild: enable darwintrace earlier so that xcodebuild is logged
	- installXcodebuild: install ICU into the private BuildRoot/XCD/
	- darwinbuild: receipts are now created for pre-built roots only when
	  necessary
	- darwinbuild: create receipts for -headers mode
	- darwintrace: calls to readlink(2) are now logged
	- darwinbuild: added -nopatch option to build without applying patches

Release 0.7.1 [6-Sep-2005]
	- darwinbuild: Restore use of InstallHeader()
	- darwinxref: install DBPlugin.h header file
	- darwinxref: added group Tcl hooks and group plugin
	- darwinbuild: no longer appends build number to binary_sites URL;
	  uses inheritance when HTTP failures encountered
	- darwinxref: added new groups API
	- darwinxref: added default handlers for plugins
	- darwinxref: call redo_prebinding to create a canonical Mach-O binary
	  during register for reproducible manifests
	- Added synthfat script to synthesize fat dylibs from thin dylibs
	- Added darwinmaster.sh for creating bootable CDs
	- Added packageRoots.sh to archive most recent Roots for the build
	- Added thinFile.sh to thin a single Mach-O file
	- Added thinPackages.sh to create multiple thin Packages from a fat one
	- darwinbuild.common: added CheckDarwinBuildRoot function
	- darwinxref: added support for CFData in the sqlite database
	- darwinxref: treat dyld as a "lib" dependency